--- a/C3_Set_Hivemq.html
+++ b/C3_Set_Hivemq.html
@@ -32,9 +32,7 @@
       --border-soft: rgba(148,163,184,0.4);
     }
 
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -123,16 +121,13 @@
       font-size: 0.8rem;
       line-height: 1;
       margin: 0;
-      margin-top: -4px; /* 아이콘을 제목 라인에 맞추기 위해 살짝 위로 */
+      margin-top: -4px;
       box-shadow: none;
       display: inline-flex;
       align-items: center;
       justify-content: center;
     }
-
-    .theme-toggle-icon {
-      font-size: 1.1rem;
-    }
+    .theme-toggle-icon { font-size: 1.1rem; }
 
     #log {
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -175,7 +170,7 @@
     <div style="margin-top:4px;font-size:0.85rem;color:var(--subtle);">
       브로커: 
       <code>6c56aefe0ddb4d57977c735f5070abe8.s1.eu.hivemq.cloud</code><br>
-      Web: WSS 8884 / ESP32: TLS 8883
+      Web: <code>WSS 8884</code> / ESP32: <code>TLS 8883</code>
     </div>
     <div style="margin-top:4px;font-size:0.8rem;color:var(--muted);">
       장비 상태: <span id="deviceState">알 수 없음</span>
@@ -253,7 +248,7 @@
     const themeToggleBtn  = $("#themeToggle");
     const themeToggleIcon = themeToggleBtn.querySelector(".theme-toggle-icon");
 
-    // ── 다크/라이트 테마 적용 ──────────────────────
+    // ── 다크/라이트 테마 ──────────────────────
     function applyTheme(theme) {
       const isDark = theme === "dark";
       document.body.setAttribute("data-theme", theme);
@@ -283,6 +278,7 @@
       const time = new Date().toLocaleTimeString();
       logEl.textContent += `[${time}] ${msg}\n`;
       logEl.scrollTop = logEl.scrollHeight;
+      console.log(msg);
     }
 
     function setMqttStatus(ok, text) {
@@ -314,7 +310,6 @@
     };
 
     const client = mqtt.connect(brokerUrl, options);
-
     let lastDeviceMsgAt = null;
 
     client.on("connect", () => {
@@ -349,7 +344,7 @@
 
       const trimmed = text.trim();
       if (!trimmed.startsWith("{")) {
-        // online / offline / Aktif 같은 문자열은 조용히 무시
+        // online / offline / 기타 문자열이면 무시
         return;
       }
 
@@ -365,7 +360,6 @@
       if ("alive" in data) {
         setDeviceState(!!data.alive);
       } else {
-        // alive 필드 없으면 일단 온라인으로 취급
         setDeviceState(true);
       }
 
@@ -379,13 +373,11 @@
       lastUpdateEl.textContent = new Date().toLocaleString();
     });
 
-    // heartbeat 타임아웃 – 10초 이상 메시지 없으면 오프라인으로 표시
+    // 10초 이상 메시지 없으면 오프라인 표시
     setInterval(() => {
       if (!lastDeviceMsgAt) return;
       const diff = Date.now() - lastDeviceMsgAt;
-      if (diff > 10000) { // 10초
-        setDeviceState(false);
-      }
+      if (diff > 10000) setDeviceState(false);
     }, 2000);
 
     // ===== LED 제어 Publish =====
