--- a/C3_Set_Hivemq.html
+++ b/C3_Set_Hivemq.html
@@ -71,6 +71,7 @@
       margin-right: 6px;
       background: #9ca3af;
     }
+
     .status-ok { background: #22c55e; }
     .status-bad { background: #ef4444; }
 
@@ -86,8 +87,8 @@
       padding: 10px;
       text-align: center;
       border: 1px solid var(--border-soft);
-      transition: background 0.25s ease, border-color 0.25s ease;
     }
+
     .metric-label { font-size: 0.8rem; color: var(--subtle); }
     .metric-value { font-size: 1.3rem; font-weight: 600; margin-top: 4px; }
 
@@ -102,15 +103,10 @@
       display: inline-flex;
       align-items: center;
       gap: 4px;
-      transition: transform 0.08s ease, box-shadow 0.12s ease, background 0.2s ease, color 0.2s ease;
-    }
-    button:active {
-      transform: translateY(1px);
-      box-shadow: none;
     }
 
-    #btnOn { background: #2ecc71; color: #fff; box-shadow: 0 2px 6px rgba(34,197,94,0.4); }
-    #btnOff { background: #e74c3c; color: #fff; box-shadow: 0 2px 6px rgba(239,68,68,0.4); }
+    #btnOn { background: #2ecc71; color: #fff; }
+    #btnOff { background: #e74c3c; color: #fff; }
 
     .theme-toggle {
       background: transparent;
@@ -118,19 +114,18 @@
       border-radius: 999px;
       border: 1px solid var(--border-soft);
       padding: 6px 10px;
-      font-size: 0.8rem;
+      font-size: 1rem;
       line-height: 1;
-      margin: 0;
       margin-top: -4px;
-      box-shadow: none;
       display: inline-flex;
       align-items: center;
       justify-content: center;
     }
-    .theme-toggle-icon { font-size: 1.1rem; }
+
+    .theme-toggle-icon { font-size: 1.2rem; }
 
     #log {
-      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-family: ui-monospace, monospace;
       font-size: 0.8rem;
       max-height: 200px;
       overflow-y: auto;
@@ -140,38 +135,29 @@
       border-radius: 8px;
       white-space: pre-wrap;
       border: 1px solid var(--border-soft);
-      transition: background 0.25s ease, color 0.25s ease, border-color 0.25s ease;
-    }
-
-    code {
-      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-      font-size: 0.8rem;
-      padding: 2px 4px;
-      border-radius: 4px;
-      background: rgba(148,163,184,0.15);
     }
   </style>
 </head>
+
 <body data-theme="light">
   <header class="page-header">
     <h1>ESP32+HiveMQ 대시 보드</h1>
-    <!-- 우측 상단: 심볼만 있는 다크/라이트 토글 -->
-    <button id="themeToggle" class="theme-toggle" type="button" aria-label="테마 전환">
-      <span class="theme-toggle-icon">🌞</span>
-    </button>
+    <button id="themeToggle" class="theme-toggle"><span class="theme-toggle-icon">🌞</span></button>
   </header>
 
-  <!-- 브로커/장비 상태 -->
+  <!-- 상태 카드 -->
   <div class="card">
     <div>
       <span id="mqttDot" class="status-dot"></span>
       <strong id="mqttState">MQTT 연결 대기 중...</strong>
     </div>
+
+    <!-- ◀ 수정된 부분 -->
     <div style="margin-top:4px;font-size:0.85rem;color:var(--subtle);">
-      브로커: 
-      <code>6c56aefe0ddb4d57977c735f5070abe8.s1.eu.hivemq.cloud</code><br>
-      Web: <code>WSS 8884</code> / ESP32: <code>TLS 8883</code>
+      브로커: <code>broker.hivemq.com</code><br>
+      Web: <code>WS 8000</code> / ESP32: <code>1883</code>
     </div>
+
     <div style="margin-top:4px;font-size:0.8rem;color:var(--muted);">
       장비 상태: <span id="deviceState">알 수 없음</span>
     </div>
@@ -180,34 +166,16 @@
     </div>
   </div>
 
-  <!-- 센서값/상태 -->
+  <!-- 센서 카드 -->
   <div class="card">
     <h2 style="font-size:1.1rem;margin-top:0;">센서 상태 (esp32c3/status)</h2>
     <div class="grid">
-      <div class="metric">
-        <div class="metric-label">온도</div>
-        <div class="metric-value"><span id="valTemp">--</span> °C</div>
-      </div>
-      <div class="metric">
-        <div class="metric-label">습도</div>
-        <div class="metric-value"><span id="valHum">--</span> %</div>
-      </div>
-      <div class="metric">
-        <div class="metric-label">CO₂</div>
-        <div class="metric-value"><span id="valCo2">--</span> ppm</div>
-      </div>
-      <div class="metric">
-        <div class="metric-label">일사량</div>
-        <div class="metric-value"><span id="valSolar">--</span> W/m²</div>
-      </div>
-      <div class="metric">
-        <div class="metric-label">LED 상태</div>
-        <div class="metric-value"><span id="valLed">--</span></div>
-      </div>
-      <div class="metric">
-        <div class="metric-label">WiFi RSSI</div>
-        <div class="metric-value"><span id="valRssi">--</span> dBm</div>
-      </div>
+      <div class="metric"><div class="metric-label">온도</div><div class="metric-value"><span id="valTemp">--</span> °C</div></div>
+      <div class="metric"><div class="metric-label">습도</div><div class="metric-value"><span id="valHum">--</span> %</div></div>
+      <div class="metric"><div class="metric-label">CO₂</div><div class="metric-value"><span id="valCo2">--</span> ppm</div></div>
+      <div class="metric"><div class="metric-label">일사량</div><div class="metric-value"><span id="valSolar">--</span></div></div>
+      <div class="metric"><div class="metric-label">LED 상태</div><div class="metric-value"><span id="valLed">--</span></div></div>
+      <div class="metric"><div class="metric-label">RSSI</div><div class="metric-value"><span id="valRssi">--</span> dBm</div></div>
     </div>
   </div>
 
@@ -226,14 +194,13 @@
   </div>
 
   <script>
-    const $ = (sel) => document.querySelector(sel);
+    const $ = (s) => document.querySelector(s);
 
-    const mqttStateEl   = $("#mqttState");
     const mqttDotEl     = $("#mqttDot");
+    const mqttStateEl   = $("#mqttState");
     const deviceStateEl = $("#deviceState");
     const lastUpdateEl  = $("#lastUpdate");
     const logEl         = $("#log");
-    const cmdResultEl   = $("#cmdResult");
 
     const valTemp  = $("#valTemp");
     const valHum   = $("#valHum");
@@ -246,160 +213,102 @@
     const btnOff = $("#btnOff");
 
     const themeToggleBtn  = $("#themeToggle");
-    const themeToggleIcon = themeToggleBtn.querySelector(".theme-toggle-icon");
+    const themeIcon       = themeToggleBtn.querySelector(".theme-toggle-icon");
 
-    // ── 다크/라이트 테마 ──────────────────────
-    function applyTheme(theme) {
-      const isDark = theme === "dark";
-      document.body.setAttribute("data-theme", theme);
-      themeToggleIcon.textContent = isDark ? "🌙" : "🌞";
+    // ------------------ 다크/라이트 테마 ------------------
+    function applyTheme(t) {
+      document.body.setAttribute("data-theme", t);
+      themeIcon.textContent = t === "dark" ? "🌙" : "🌞";
     }
 
-    (function initTheme() {
-      const saved = localStorage.getItem("hivemq-dashboard-theme");
-      let theme = "light";
-      if (saved === "light" || saved === "dark") {
-        theme = saved;
-      } else if (window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches) {
-        theme = "dark";
-      }
-      applyTheme(theme);
+    (function restoreTheme() {
+      const saved = localStorage.getItem("hivemq-theme");
+      applyTheme(saved || "light");
     })();
 
-    themeToggleBtn.addEventListener("click", () => {
-      const current = document.body.getAttribute("data-theme") || "light";
-      const next = current === "dark" ? "light" : "dark";
-      localStorage.setItem("hivemq-dashboard-theme", next);
+    themeToggleBtn.onclick = () => {
+      const cur = document.body.getAttribute("data-theme");
+      const next = cur === "dark" ? "light" : "dark";
+      localStorage.setItem("hivemq-theme", next);
       applyTheme(next);
-    });
+    };
 
-    // ── 로그 출력 ─────────────────────────────
+    // ------------------ MQTT 연결 ------------------
     function log(msg) {
-      const time = new Date().toLocaleTimeString();
-      logEl.textContent += `[${time}] ${msg}\n`;
+      logEl.textContent += `[${new Date().toLocaleTimeString()}] ${msg}\n`;
       logEl.scrollTop = logEl.scrollHeight;
-      console.log(msg);
     }
 
     function setMqttStatus(ok, text) {
       mqttDotEl.classList.remove("status-ok", "status-bad");
-      if (ok) mqttDotEl.classList.add("status-ok");
-      else    mqttDotEl.classList.add("status-bad");
+      mqttDotEl.classList.add(ok ? "status-ok" : "status-bad");
       mqttStateEl.textContent = text;
     }
 
-    function setDeviceState(alive) {
-      if (alive) {
-        deviceStateEl.textContent = "온라인";
-        deviceStateEl.style.color = "#16a34a";
-      } else {
-        deviceStateEl.textContent = "오프라인";
-        deviceStateEl.style.color = "#dc2626";
-      }
+    function setDeviceState(ok) {
+      deviceStateEl.textContent = ok ? "온라인" : "오프라인";
+      deviceStateEl.style.color = ok ? "#16a34a" : "#dc2626";
     }
 
-    // ===== HiveMQ Cloud WebSocket 설정 =====
-    const brokerUrl = "wss://6c56aefe0ddb4d57977c735f5070abe8.s1.eu.hivemq.cloud:8884/mqtt";
-
+    // ------- 브로커: broker.hivemq.com ------
+    const brokerUrl = "ws://broker.hivemq.com:8000/mqtt";
     const options = {
       clean: true,
       connectTimeout: 4000,
-      reconnectPeriod: 5000,
-      username: "mqtt_ESP32",
-      password: "gomqtt_ESP32"
+      reconnectPeriod: 4000,
     };
 
     const client = mqtt.connect(brokerUrl, options);
-    let lastDeviceMsgAt = null;
 
     client.on("connect", () => {
-      setMqttStatus(true, "MQTT 연결 OK (HiveMQ Cloud)");
-      log("MQTT(HiveMQ Cloud) 연결 성공");
+      setMqttStatus(true, "MQTT 연결 OK (broker.hivemq.com)");
+      log("연결 성공");
 
-      const topicStatus = "esp32c3/status";
-      client.subscribe(topicStatus, (err) => {
-        if (err) log("구독 실패: " + err.message);
-        else     log("구독 성공: " + topicStatus);
+      client.subscribe("esp32c3/status", (err) => {
+        if (!err) log("구독 성공 esp32c3/status");
       });
     });
 
-    client.on("reconnect", () => {
-      setMqttStatus(false, "MQTT 재연결 시도 중...");
-      log("재연결 시도...");
-    });
-
-    client.on("error", (err) => {
+    client.on("error", e => {
       setMqttStatus(false, "MQTT 에러");
-      log("에러: " + err.message);
+      log("MQTT 에러: " + e.message);
     });
 
     client.on("close", () => {
       setMqttStatus(false, "MQTT 연결 끊김");
-      log("MQTT 연결 끊김");
+      log("연결 끊김");
     });
 
     client.on("message", (topic, payload) => {
-      const text = new TextDecoder().decode(payload);
-      log(`수신 (${topic}): ${text}`);
+      let text = new TextDecoder().decode(payload);
+      log(`수신(${topic}): ${text}`);
 
-      const trimmed = text.trim();
-      if (!trimmed.startsWith("{")) {
-        // online / offline / 기타 문자열이면 무시
-        return;
-      }
+      if (!text.startsWith("{")) return;
 
-      let data;
-      try {
-        data = JSON.parse(trimmed);
-      } catch (e) {
-        log("JSON 파싱 실패");
-        return;
-      }
+      const data = JSON.parse(text);
 
-      lastDeviceMsgAt = Date.now();
-      if ("alive" in data) {
-        setDeviceState(!!data.alive);
-      } else {
-        setDeviceState(true);
-      }
+      setDeviceState(data.alive !== false);
 
-      if ("temp"  in data) valTemp.textContent  = Number(data.temp).toFixed(1);
-      if ("hum"   in data) valHum.textContent   = Number(data.hum).toFixed(1);
-      if ("co2"   in data) valCo2.textContent   = Number(data.co2).toFixed(0);
-      if ("solar" in data) valSolar.textContent = Number(data.solar).toFixed(0);
-      if ("led"   in data) valLed.textContent   = data.led ? "ON" : "OFF";
-      if ("rssi"  in data) valRssi.textContent  = Number(data.rssi).toFixed(0);
+      valTemp.textContent  = data.temp  ?? "--";
+      valHum.textContent   = data.hum   ?? "--";
+      valCo2.textContent   = data.co2   ?? "--";
+      valSolar.textContent = data.solar ?? "--";
+      valLed.textContent   = data.led ? "ON" : "OFF";
+      valRssi.textContent  = data.rssi ?? "--";
 
       lastUpdateEl.textContent = new Date().toLocaleString();
     });
 
-    // 10초 이상 메시지 없으면 오프라인 표시
-    setInterval(() => {
-      if (!lastDeviceMsgAt) return;
-      const diff = Date.now() - lastDeviceMsgAt;
-      if (diff > 10000) setDeviceState(false);
-    }, 2000);
-
-    // ===== LED 제어 Publish =====
-    function publishLed(cmd) {
-      if (!client.connected) {
-        cmdResultEl.textContent = "MQTT가 연결되지 않았습니다.";
-        return;
-      }
-      const topic = "esp32c3/led";
-      client.publish(topic, cmd, { qos: 0, retain: false }, (err) => {
-        if (err) {
-          cmdResultEl.textContent = "전송 실패: " + err.message;
-          log("LED publish 실패: " + err.message);
-        } else {
-          cmdResultEl.textContent = `전송 완료: ${cmd}`;
-          log(`LED 명령 전송 (${topic}): ${cmd}`);
-        }
-      });
+    // ------- LED 제어 토픽: esp32c3/led ------
+    function sendLed(cmd) {
+      if (!client.connected) return;
+      client.publish("esp32c3/led", cmd);
+      log("전송: " + cmd);
     }
 
-    btnOn.addEventListener("click", () => publishLed("LED_ON"));
-    btnOff.addEventListener("click", () => publishLed("LED_OFF"));
+    btnOn.onclick  = () => sendLed("LED_ON");
+    btnOff.onclick = () => sendLed("LED_OFF");
+
   </script>
 </body>
 </html>
