--- a/C3_Set_Hivemq.html
+++ b/C3_Set_Hivemq.html
@@ -71,7 +71,6 @@
       margin-right: 6px;
       background: #9ca3af;
     }
-
     .status-ok { background: #22c55e; }
     .status-bad { background: #ef4444; }
 
@@ -87,8 +86,8 @@
       padding: 10px;
       text-align: center;
       border: 1px solid var(--border-soft);
+      transition: background 0.25s ease, border-color 0.25s ease;
     }
-
     .metric-label { font-size: 0.8rem; color: var(--subtle); }
     .metric-value { font-size: 1.3rem; font-weight: 600; margin-top: 4px; }
 
@@ -103,10 +102,15 @@
       display: inline-flex;
       align-items: center;
       gap: 4px;
+      transition: transform 0.08s ease, box-shadow 0.12s ease, background 0.2s ease, color 0.2s ease;
+    }
+    button:active {
+      transform: translateY(1px);
+      box-shadow: none;
     }
 
-    #btnOn { background: #2ecc71; color: #fff; }
-    #btnOff { background: #e74c3c; color: #fff; }
+    #btnOn { background: #22c55e; color: #fff; box-shadow: 0 2px 6px rgba(34,197,94,0.4); }
+    #btnOff { background: #ef4444; color: #fff; box-shadow: 0 2px 6px rgba(239,68,68,0.4); }
 
     .theme-toggle {
       background: transparent;
@@ -114,18 +118,19 @@
       border-radius: 999px;
       border: 1px solid var(--border-soft);
       padding: 6px 10px;
-      font-size: 1rem;
+      font-size: 0.8rem;
       line-height: 1;
+      margin: 0;
       margin-top: -4px;
+      box-shadow: none;
       display: inline-flex;
       align-items: center;
       justify-content: center;
     }
-
-    .theme-toggle-icon { font-size: 1.2rem; }
+    .theme-toggle-icon { font-size: 1.1rem; }
 
     #log {
-      font-family: ui-monospace, monospace;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
       font-size: 0.8rem;
       max-height: 200px;
       overflow-y: auto;
@@ -135,29 +140,37 @@
       border-radius: 8px;
       white-space: pre-wrap;
       border: 1px solid var(--border-soft);
+      transition: background 0.25s ease, color 0.25s ease, border-color 0.25s ease;
+    }
+
+    code {
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-size: 0.8rem;
+      padding: 2px 4px;
+      border-radius: 4px;
+      background: rgba(148,163,184,0.15);
     }
   </style>
 </head>
-
 <body data-theme="light">
   <header class="page-header">
     <h1>ESP32+HiveMQ 대시 보드</h1>
-    <button id="themeToggle" class="theme-toggle"><span class="theme-toggle-icon">🌞</span></button>
+    <button id="themeToggle" class="theme-toggle" type="button" aria-label="테마 전환">
+      <span class="theme-toggle-icon">🌞</span>
+    </button>
   </header>
 
-  <!-- 상태 카드 -->
+  <!-- 브로커/장비 상태 -->
   <div class="card">
     <div>
       <span id="mqttDot" class="status-dot"></span>
       <strong id="mqttState">MQTT 연결 대기 중...</strong>
     </div>
-
-    <!-- ◀ 수정된 부분 -->
+    <!-- 🔽 여기 표시 텍스트만 변경 -->
     <div style="margin-top:4px;font-size:0.85rem;color:var(--subtle);">
       브로커: <code>broker.hivemq.com</code><br>
-      Web: <code>WS 8000</code> / ESP32: <code>1883</code>
+      Web: <code>WSS 8884</code> / ESP32: <code>TLS 8883</code>
     </div>
-
     <div style="margin-top:4px;font-size:0.8rem;color:var(--muted);">
       장비 상태: <span id="deviceState">알 수 없음</span>
     </div>
@@ -166,16 +179,34 @@
     </div>
   </div>
 
-  <!-- 센서 카드 -->
+  <!-- 센서값/상태 -->
   <div class="card">
     <h2 style="font-size:1.1rem;margin-top:0;">센서 상태 (esp32c3/status)</h2>
     <div class="grid">
-      <div class="metric"><div class="metric-label">온도</div><div class="metric-value"><span id="valTemp">--</span> °C</div></div>
-      <div class="metric"><div class="metric-label">습도</div><div class="metric-value"><span id="valHum">--</span> %</div></div>
-      <div class="metric"><div class="metric-label">CO₂</div><div class="metric-value"><span id="valCo2">--</span> ppm</div></div>
-      <div class="metric"><div class="metric-label">일사량</div><div class="metric-value"><span id="valSolar">--</span></div></div>
-      <div class="metric"><div class="metric-label">LED 상태</div><div class="metric-value"><span id="valLed">--</span></div></div>
-      <div class="metric"><div class="metric-label">RSSI</div><div class="metric-value"><span id="valRssi">--</span> dBm</div></div>
+      <div class="metric">
+        <div class="metric-label">온도</div>
+        <div class="metric-value"><span id="valTemp">--</span> °C</div>
+      </div>
+      <div class="metric">
+        <div class="metric-label">습도</div>
+        <div class="metric-value"><span id="valHum">--</span> %</div>
+      </div>
+      <div class="metric">
+        <div class="metric-label">CO₂</div>
+        <div class="metric-value"><span id="valCo2">--</span> ppm</div>
+      </div>
+      <div class="metric">
+        <div class="metric-label">일사량</div>
+        <div class="metric-value"><span id="valSolar">--</span> W/m²</div>
+      </div>
+      <div class="metric">
+        <div class="metric-label">LED 상태</div>
+        <div class="metric-value"><span id="valLed">--</span></div>
+      </div>
+      <div class="metric">
+        <div class="metric-label">WiFi RSSI</div>
+        <div class="metric-value"><span id="valRssi">--</span> dBm</div>
+      </div>
     </div>
   </div>
 
@@ -194,13 +225,14 @@
   </div>
 
   <script>
-    const $ = (s) => document.querySelector(s);
+    const $ = (sel) => document.querySelector(sel);
 
-    const mqttDotEl     = $("#mqttDot");
     const mqttStateEl   = $("#mqttState");
+    const mqttDotEl     = $("#mqttDot");
     const deviceStateEl = $("#deviceState");
     const lastUpdateEl  = $("#lastUpdate");
     const logEl         = $("#log");
+    const cmdResultEl   = $("#cmdResult");
 
     const valTemp  = $("#valTemp");
     const valHum   = $("#valHum");
@@ -213,30 +245,39 @@
     const btnOff = $("#btnOff");
 
     const themeToggleBtn  = $("#themeToggle");
-    const themeIcon       = themeToggleBtn.querySelector(".theme-toggle-icon");
+    const themeToggleIcon = themeToggleBtn.querySelector(".theme-toggle-icon");
 
-    // ------------------ 다크/라이트 테마 ------------------
-    function applyTheme(t) {
-      document.body.setAttribute("data-theme", t);
-      themeIcon.textContent = t === "dark" ? "🌙" : "🌞";
+    // ── 다크/라이트 테마 ──────────────────────
+    function applyTheme(theme) {
+      const isDark = theme === "dark";
+      document.body.setAttribute("data-theme", theme);
+      themeToggleIcon.textContent = isDark ? "🌙" : "🌞";
     }
 
-    (function restoreTheme() {
-      const saved = localStorage.getItem("hivemq-theme");
-      applyTheme(saved || "light");
+    (function initTheme() {
+      const saved = localStorage.getItem("C3_Set_Hivemq_theme");
+      let theme = "light";
+      if (saved === "light" || saved === "dark") {
+        theme = saved;
+      } else if (window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches) {
+        theme = "dark";
+      }
+      applyTheme(theme);
     })();
 
-    themeToggleBtn.onclick = () => {
-      const cur = document.body.getAttribute("data-theme");
-      const next = cur === "dark" ? "light" : "dark";
-      localStorage.setItem("hivemq-theme", next);
+    themeToggleBtn.addEventListener("click", () => {
+      const current = document.body.getAttribute("data-theme") || "light";
+      const next = current === "dark" ? "light" : "dark";
+      localStorage.setItem("C3_Set_Hivemq_theme", next);
       applyTheme(next);
-    };
+    });
 
-    // ------------------ MQTT 연결 ------------------
+    // ── 로그 출력 ─────────────────────────────
     function log(msg) {
-      logEl.textContent += `[${new Date().toLocaleTimeString()}] ${msg}\n`;
+      const time = new Date().toLocaleTimeString();
+      logEl.textContent += `[${time}] ${msg}\n`;
       logEl.scrollTop = logEl.scrollHeight;
+      console.log(msg);
     }
 
     function setMqttStatus(ok, text) {
@@ -245,70 +286,114 @@
       mqttStateEl.textContent = text;
     }
 
-    function setDeviceState(ok) {
-      deviceStateEl.textContent = ok ? "온라인" : "오프라인";
-      deviceStateEl.style.color = ok ? "#16a34a" : "#dc2626";
+    function setDeviceState(alive) {
+      if (alive) {
+        deviceStateEl.textContent = "온라인";
+        deviceStateEl.style.color = "#16a34a";
+      } else {
+        deviceStateEl.textContent = "오프라인";
+        deviceStateEl.style.color = "#dc2626";
+      }
     }
 
-    // ------- 브로커: broker.hivemq.com ------
-    const brokerUrl = "ws://broker.hivemq.com:8000/mqtt";
+    // ===== 내부 접속: 그대로 HiveMQ Cloud WSS 8884 사용 =====
+    const brokerUrl = "wss://6c56aefe0ddb4d57977c735f5070abe8.s1.eu.hivemq.cloud:8884/mqtt";
     const options = {
       clean: true,
       connectTimeout: 4000,
-      reconnectPeriod: 4000,
+      reconnectPeriod: 5000,
+      username: "mqtt_ESP32",
+      password: "gomqtt_ESP32"
     };
 
     const client = mqtt.connect(brokerUrl, options);
+    let lastDeviceMsgAt = null;
 
     client.on("connect", () => {
-      setMqttStatus(true, "MQTT 연결 OK (broker.hivemq.com)");
-      log("연결 성공");
+      setMqttStatus(true, "MQTT 연결 OK (HiveMQ Cloud)");
+      log("MQTT(HiveMQ Cloud) 연결 성공");
 
-      client.subscribe("esp32c3/status", (err) => {
-        if (!err) log("구독 성공 esp32c3/status");
+      const topicStatus = "esp32c3/status";
+      client.subscribe(topicStatus, (err) => {
+        if (err) log("구독 실패: " + err.message);
+        else     log("구독 성공: " + topicStatus);
       });
     });
 
-    client.on("error", e => {
+    client.on("reconnect", () => {
+      setMqttStatus(false, "MQTT 재연결 시도 중...");
+      log("재연결 시도...");
+    });
+
+    client.on("error", (err) => {
       setMqttStatus(false, "MQTT 에러");
-      log("MQTT 에러: " + e.message);
+      log("에러: " + err.message);
     });
 
     client.on("close", () => {
       setMqttStatus(false, "MQTT 연결 끊김");
-      log("연결 끊김");
+      log("MQTT 연결 끊김");
     });
 
     client.on("message", (topic, payload) => {
-      let text = new TextDecoder().decode(payload);
-      log(`수신(${topic}): ${text}`);
+      const text = new TextDecoder().decode(payload);
+      log(`수신 (${topic}): ${text}`);
 
-      if (!text.startsWith("{")) return;
+      const trimmed = text.trim();
+      if (!trimmed.startsWith("{")) {
+        return; // online/offline 문자열이면 무시
+      }
 
-      const data = JSON.parse(text);
+      let data;
+      try {
+        data = JSON.parse(trimmed);
+      } catch (e) {
+        log("JSON 파싱 실패");
+        return;
+      }
 
+      lastDeviceMsgAt = Date.now();
       setDeviceState(data.alive !== false);
 
-      valTemp.textContent  = data.temp  ?? "--";
-      valHum.textContent   = data.hum   ?? "--";
-      valCo2.textContent   = data.co2   ?? "--";
-      valSolar.textContent = data.solar ?? "--";
-      valLed.textContent   = data.led ? "ON" : "OFF";
-      valRssi.textContent  = data.rssi ?? "--";
+      if ("temp"  in data) valTemp.textContent  = Number(data.temp).toFixed(1);
+      if ("hum"   in data) valHum.textContent   = Number(data.hum).toFixed(1);
+      if ("co2"   in data) valCo2.textContent   = Number(data.co2).toFixed(0);
+      if ("solar" in data) valSolar.textContent = Number(data.solar).toFixed(0);
+      if ("led"   in data) valLed.textContent   = data.led ? "ON" : "OFF";
+      if ("rssi"  in data) valRssi.textContent  = Number(data.rssi).toFixed(0);
 
       lastUpdateEl.textContent = new Date().toLocaleString();
     });
 
-    // ------- LED 제어 토픽: esp32c3/led ------
-    function sendLed(cmd) {
-      if (!client.connected) return;
-      client.publish("esp32c3/led", cmd);
-      log("전송: " + cmd);
+    // 10초 이상 메시지 없으면 오프라인 표시
+    setInterval(() => {
+      if (!lastDeviceMsgAt) return;
+      const diff = Date.now() - lastDeviceMsgAt;
+      if (diff > 10000) {
+        setDeviceState(false);
+      }
+    }, 2000);
+
+    // ===== LED 제어 Publish =====
+    function publishLed(cmd) {
+      if (!client.connected) {
+        cmdResultEl.textContent = "MQTT가 연결되지 않았습니다.";
+        return;
+      }
+      const topic = "esp32c3/led";
+      client.publish(topic, cmd, { qos: 0, retain: false }, (err) => {
+        if (err) {
+          cmdResultEl.textContent = "전송 실패: " + err.message;
+          log("LED publish 실패: " + err.message);
+        } else {
+          cmdResultEl.textContent = `전송 완료: ${cmd}`;
+          log(`LED 명령 전송 (${topic}): ${cmd}`);
+        }
+      });
     }
 
-    btnOn.onclick  = () => sendLed("LED_ON");
-    btnOff.onclick = () => sendLed("LED_OFF");
-
+    btnOn.addEventListener("click", () => publishLed("LED_ON"));
+    btnOff.addEventListener("click", () => publishLed("LED_OFF"));
   </script>
 </body>
 </html>
