--- a/C3_Set_Demo.html
+++ b/C3_Set_Demo.html
@@ -32,7 +32,9 @@
       --border-soft: rgba(148,163,184,0.4);
     }
 
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
 
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -109,8 +111,8 @@
       box-shadow: none;
     }
 
-    #btnOn { background: #22c55e; color: #fff; box-shadow: 0 2px 6px rgba(34,197,94,0.4); }
-    #btnOff { background: #ef4444; color: #fff; box-shadow: 0 2px 6px rgba(239,68,68,0.4); }
+    #btnOn { background: #2ecc71; color: #fff; box-shadow: 0 2px 6px rgba(34,197,94,0.4); }
+    #btnOff { background: #e74c3c; color: #fff; box-shadow: 0 2px 6px rgba(239,68,68,0.4); }
 
     .theme-toggle {
       background: transparent;
@@ -121,13 +123,16 @@
       font-size: 0.8rem;
       line-height: 1;
       margin: 0;
-      margin-top: -4px;
+      margin-top: -4px; /* 아이콘을 제목 라인에 맞추기 위해 살짝 위로 */
       box-shadow: none;
       display: inline-flex;
       align-items: center;
       justify-content: center;
     }
-    .theme-toggle-icon { font-size: 1.1rem; }
+
+    .theme-toggle-icon {
+      font-size: 1.1rem;
+    }
 
     #log {
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -155,6 +160,7 @@
 <body data-theme="light">
   <header class="page-header">
     <h1>ESP32+HiveMQ 대시 보드</h1>
+    <!-- 우측 상단: 심볼만 있는 다크/라이트 토글 -->
     <button id="themeToggle" class="theme-toggle" type="button" aria-label="테마 전환">
       <span class="theme-toggle-icon">🌞</span>
     </button>
@@ -167,9 +173,9 @@
       <strong id="mqttState">MQTT 연결 대기 중...</strong>
     </div>
     <div style="margin-top:4px;font-size:0.85rem;color:var(--subtle);">
-      브로커:
+      브로커: 
       <code>broker.hivemq.com</code><br>
-      Web: <code>WS 8000</code> / ESP32: <code>1883</code>
+      Web: WS 8000 / ESP32: 1883
     </div>
     <div style="margin-top:4px;font-size:0.8rem;color:var(--muted);">
       장비 상태: <span id="deviceState">알 수 없음</span>
@@ -213,8 +219,8 @@
   <!-- LED 제어 -->
   <div class="card">
     <h2 style="font-size:1.1rem;margin-top:0;">LED 제어 (esp32c3/led)</h2>
-    <button id="btnOn" type="button">LED ON</button>
-    <button id="btnOff" type="button">LED OFF</button>
+    <button id="btnOn">LED ON</button>
+    <button id="btnOff">LED OFF</button>
     <div id="cmdResult" style="margin-top:8px;font-size:0.8rem;color:var(--subtle);">-</div>
   </div>
 
@@ -247,7 +253,7 @@
     const themeToggleBtn  = $("#themeToggle");
     const themeToggleIcon = themeToggleBtn.querySelector(".theme-toggle-icon");
 
-    // ── 다크/라이트 테마 ──────────────────────
+    // ── 다크/라이트 테마 적용 ──────────────────────
     function applyTheme(theme) {
       const isDark = theme === "dark";
       document.body.setAttribute("data-theme", theme);
@@ -255,7 +261,7 @@
     }
 
     (function initTheme() {
-      const saved = localStorage.getItem("C3_Set_Demo_theme");
+      const saved = localStorage.getItem("hivemq-dashboard-theme");
       let theme = "light";
       if (saved === "light" || saved === "dark") {
         theme = saved;
@@ -268,7 +274,7 @@
     themeToggleBtn.addEventListener("click", () => {
       const current = document.body.getAttribute("data-theme") || "light";
       const next = current === "dark" ? "light" : "dark";
-      localStorage.setItem("C3_Set_Demo_theme", next);
+      localStorage.setItem("hivemq-dashboard-theme", next);
       applyTheme(next);
     });
 
@@ -277,12 +283,12 @@
       const time = new Date().toLocaleTimeString();
       logEl.textContent += `[${time}] ${msg}\n`;
       logEl.scrollTop = logEl.scrollHeight;
-      console.log(msg);
     }
 
     function setMqttStatus(ok, text) {
       mqttDotEl.classList.remove("status-ok", "status-bad");
-      mqttDotEl.classList.add(ok ? "status-ok" : "status-bad");
+      if (ok) mqttDotEl.classList.add("status-ok");
+      else    mqttDotEl.classList.add("status-bad");
       mqttStateEl.textContent = text;
     }
 
@@ -296,21 +302,23 @@
       }
     }
 
-    // ===== 데모 브로커 WebSocket 설정 (broker.hivemq.com) =====
+    // ===== 데모 MQTT WebSocket 설정 =====
     const brokerUrl = "ws://broker.hivemq.com:8000/mqtt";
+
     const options = {
       clean: true,
       connectTimeout: 4000,
       reconnectPeriod: 5000
-      // demo public broker → username/password 없음
+      // demo broker → username/password 없음
     };
 
     const client = mqtt.connect(brokerUrl, options);
+
     let lastDeviceMsgAt = null;
 
     client.on("connect", () => {
       setMqttStatus(true, "MQTT 연결 OK (broker.hivemq.com)");
-      log("MQTT 연결 성공");
+      log("MQTT 연결 성공 (broker.hivemq.com)");
 
       const topicStatus = "esp32c3/status";
       client.subscribe(topicStatus, (err) => {
@@ -340,7 +348,7 @@
 
       const trimmed = text.trim();
       if (!trimmed.startsWith("{")) {
-        // online/offline 같은 문자열이면 무시
+        // online / offline / 기타 문자열은 무시
         return;
       }
 
@@ -353,7 +361,11 @@
       }
 
       lastDeviceMsgAt = Date.now();
-      setDeviceState(data.alive !== false);
+      if ("alive" in data) {
+        setDeviceState(!!data.alive);
+      } else {
+        setDeviceState(true);
+      }
 
       if ("temp"  in data) valTemp.textContent  = Number(data.temp).toFixed(1);
       if ("hum"   in data) valHum.textContent   = Number(data.hum).toFixed(1);
@@ -365,11 +377,11 @@
       lastUpdateEl.textContent = new Date().toLocaleString();
     });
 
-    // 10초 이상 메시지 없으면 오프라인 표시
+    // heartbeat 타임아웃 – 10초 이상 메시지 없으면 오프라인으로 표시
     setInterval(() => {
       if (!lastDeviceMsgAt) return;
       const diff = Date.now() - lastDeviceMsgAt;
-      if (diff > 10000) {
+      if (diff > 10000) { // 10초
         setDeviceState(false);
       }
     }, 2000);
