--- a/C3_Set_Demo.html
+++ b/C3_Set_Demo.html
@@ -154,7 +154,7 @@ h<!DOCTYPE html>
 </head>
 <body data-theme="light">
   <header class="page-header">
-    <h1>ESP32+HiveMQ 데 보드</h1>
+    <h1>ESP32+HiveMQ 데모 보드</h1>
     <button id="themeToggle" class="theme-toggle" type="button" aria-label="테마 전환">
       <span class="theme-toggle-icon">🌞</span>
     </button>
@@ -398,4 +398,5 @@ h<!DOCTYPE html>
   </script>
 </body>
 </html>
+
 
