--- a/Basic/mqtt_Rest.html
+++ b/Basic/mqtt_Rest.html
@@ -2,60 +2,67 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8" />
-<title>ESP32 MQTT Reset</title>
+<title>ESP32 MQTT IP + Reset</title>
 <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 <style>
-    body { font-family: Arial; margin: 40px; }
-    button { padding: 12px 20px; font-size: 18px; }
-    #log { margin-top: 20px; font-family: monospace; white-space: pre; }
+  body { font-family: Arial; margin: 40px; }
+  button { padding: 12px 20px; font-size: 18px; margin-top: 10px; }
+  #log { margin-top: 20px; font-family: monospace; white-space: pre-wrap; }
+  #ip { font-weight: bold; color: green; }
 </style>
 </head>
 <body>
 
-<h2>ESP32 MQTT 원격 Reset</h2>
-
-<button id="btnReset">🔄 ESP32 Reset 실행</button>
+<h2>ESP32 MQTT IP + Soft Reset</h2>
+<div>ESP32 IP: <span id="ip">-</span></div>
+<button id="btnReset" disabled>🔄 ESP32 Reset</button>
 
 <div id="log"></div>
 
 <script>
-    const log = (msg) => {
-        document.getElementById("log").textContent += msg + "\n";
-    };
+const log = msg => {
+  document.getElementById("log").textContent += msg + "\n";
+};
 
-    // ===== HiveMQ Cloud 접속 설정 =====
-    const options = {
-        username: "mqtt_ESP32",
-        password: "gomqtt_ESP32",
-        reconnectPeriod: 2000,
-        clean: true,
-        connectTimeout: 4000
-    };
+// HiveMQ Cloud WebSocket 연결
+const options = {
+  username: "mqtt_ESP32",
+  password: "gomqtt_ESP32",
+  reconnectPeriod: 2000,
+  clean: true,
+  connectTimeout: 4000
+};
 
-    // HiveMQ Cloud WebSocket 주소
-    const client = mqtt.connect(
-        "wss://6c56aefe0ddb4d57977c735f5070abe8.s1.eu.hivemq.cloud:8884/mqtt",
-        options
-    );
+const client = mqtt.connect(
+  "wss://6c56aefe0ddb4d57977c735f5070abe8.s1.eu.hivemq.cloud:8884/mqtt",
+  options
+);
 
-    client.on("connect", () => {
-        log("MQTT 서버 연결 완료!");
-        client.subscribe("esp32/response");
-    });
+client.on("connect", () => {
+  log("MQTT 연결 완료!");
+  client.subscribe("esp32/ip");        // ESP32 IP 수신
+  client.subscribe("esp32/response");  // 리셋/상태 응답 수신
+  document.getElementById("btnReset").disabled = false;
+});
 
-    client.on("error", (err) => {
-        log("MQTT 연결 오류: " + err);
-    });
+client.on("error", err => log("MQTT 오류: " + err));
+client.on("close", () => log("MQTT 연결 종료"));
 
-    client.on("message", (topic, message) => {
-        log("[응답] " + topic + ": " + message.toString());
-    });
+client.on("message", (topic, message) => {
+  const msg = message.toString();
+  if(topic === "esp32/ip") {
+    document.getElementById("ip").textContent = msg;
+    log("[ESP32 IP] " + msg);
+  } else if(topic === "esp32/response") {
+    log("[응답] " + msg);
+  }
+});
 
-    // ===== Reset 버튼 클릭 =====
-    document.getElementById("btnReset").addEventListener("click", () => {
-        log("Reset 명령 전송...");
-        client.publish("esp32/reset", "1");   // ESP32가 구독하는 Topic
-    });
+// Reset 버튼 클릭 시
+document.getElementById("btnReset").addEventListener("click", () => {
+  log("Reset 명령 전송...");
+  client.publish("esp32/reset", "1");
+});
 </script>
 
 </body>
