--- a/C3_AP_mqtt.html
+++ b/C3_AP_mqtt.html
@@ -3,102 +3,95 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ESP32 Auto Console</title>
-
+<title>ESP32 Status Dashboard</title>
 <script src="https://cdn.tailwindcss.com"></script>
 
 <style>
-#log { 
-  white-space: pre-wrap; 
-  font-family: Menlo, Consolas, monospace; 
+.valueBox {
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
 }
 </style>
 </head>
 
 <body class="bg-slate-900 text-slate-100">
 
-<div class="max-w-3xl mx-auto py-10 px-4">
+<div class="max-w-2xl mx-auto py-10 px-4">
 
-  <h1 class="text-3xl font-bold mb-6">ESP32 Remote Serial Console</h1>
+  <h1 class="text-3xl font-bold mb-6 text-center">ESP32 Status</h1>
 
-  <div class="bg-slate-800 p-5 rounded-xl border border-slate-700 mb-6">
-    <label class="block mb-2 font-semibold">ESP32 IP (자동 감지됨)</label>
-    <input id="espIp" class="w-full p-2 rounded bg-slate-900 border border-slate-600 text-slate-100">
+  <!-- SSID / RSSI / IP 표시 -->
+  <div class="valueBox bg-slate-800 border border-slate-700 rounded-xl mb-6 p-6">
+    SSID: <span id="ssidValue">--</span><br>
+    RSSI: <span id="rssiValue">--</span> dBm<br>
+    IP: <span id="ipValue">--</span>
   </div>
 
-  <div class="bg-black p-5 rounded-xl border border-slate-700 h-96 overflow-y-auto">
-    <div id="log"></div>
-  </div>
-
-  <div class="mt-5">
-    <button onclick="sendReset()" 
+  <!-- 컨트롤 버튼 -->
+  <div class="mt-10 flex justify-center space-x-4">
+    <button onclick="sendLED(1)"
+            class="bg-green-600 hover:bg-green-700 px-5 py-2 rounded font-bold">
+      LED ON
+    </button>
+    <button onclick="sendLED(0)"
+            class="bg-yellow-600 hover:bg-yellow-700 px-5 py-2 rounded font-bold">
+      LED OFF
+    </button>
+    <button onclick="sendReset()"
             class="bg-red-600 hover:bg-red-700 px-5 py-2 rounded font-bold">
-      Soft Reset (원격 리셋)
+      Soft Reset
     </button>
   </div>
-
 </div>
 
 <script>
-let ws;
-let reconnectTimer;
+let espIP = null;
 
 /* -----------------------------
-   로그 출력
+   ESP32 상태 요청
 ------------------------------*/
-function logText(msg) {
-  const box = document.getElementById("log");
-  box.innerText += msg + "\n";
-  box.scrollTop = box.scrollHeight;
+async function updateStatus() {
+  if (!espIP) return;
+
+  try {
+    const r = await fetch(`http://${espIP}/status`);
+    const j = await r.json();
+
+    document.getElementById("ssidValue").innerText = j.ssid;
+    document.getElementById("rssiValue").innerText = j.rssi;
+    document.getElementById("ipValue").innerText = j.ip;
+
+  } catch (e) {
+    console.log("Status update failed");
+  }
 }
 
 /* -----------------------------
-   WebSocket 연결
+   LED 제어
 ------------------------------*/
-function connectWS(ip) {
-  let url = `ws://${ip}:81/`;
-  logText(`[Connecting to ${url}]`);
-
-  ws = new WebSocket(url);
-
-  ws.onopen = () => {
-    logText("[Connected]");
-    clearTimeout(reconnectTimer);
-  };
-
-  ws.onmessage = (e) => {
-    logText(e.data);
-  };
-
-  ws.onclose = () => {
-    logText("[Disconnected — retrying in 1 sec]");
-    reconnectTimer = setTimeout(() => connectWS(ip), 1000);
-  };
-
-  ws.onerror = () => {
-    logText("[WebSocket Error]");
-  };
+function sendLED(state) {
+  if (!espIP) return;
+  fetch(`http://${espIP}/led?state=${state}`);
 }
 
 /* -----------------------------
-   Soft Reset 요청
+   Soft Reset
 ------------------------------*/
 function sendReset() {
-  const ip = document.getElementById("espIp").value.trim();
-  if (!ip) return;
-  fetch(`http://${ip}/reset`)
-    .then(() => logText("[Soft Reset Sent]"))
-    .catch(() => logText("[Soft Reset Error]"));
+  if (!espIP) return;
+  fetch(`http://${espIP}/reset`);
 }
 
 /* -----------------------------
-   ESP32 자동 검색
+   자동 IP 탐지
 ------------------------------*/
 async function autoDetectIP() {
   let last = localStorage.getItem("esp32_last_ip");
   if (last) {
-    document.getElementById("espIp").value = last;
-    connectWS(last);
+    espIP = last;
+    updateStatus();
     return;
   }
 
@@ -113,20 +106,22 @@ async function autoDetectIP() {
     try {
       let r = await fetch(url + "/esp32-ip", { mode: "cors" });
       let ip = (await r.text()).trim();
-
       if (ip.startsWith("192.")) {
-        document.getElementById("espIp").value = ip;
+        espIP = ip;
         localStorage.setItem("esp32_last_ip", ip);
-        connectWS(ip);
+        updateStatus();
         return;
       }
     } catch (e) {}
   }
 
-  logText("[ESP32 자동 검색 실패]");
+  console.log("ESP32 자동 검색 실패");
 }
 
-window.onload = autoDetectIP;
+window.onload = () => {
+  autoDetectIP();
+  setInterval(updateStatus, 3000); // ← 3초 자동 갱신
+};
 </script>
 
 </body>
